# oligo-generator

./: .gitignore  README.md  RestrictionSites.csv  example_oligo.py  oligo_generator.py  oligo_generator_utility.py  pyproject.toml  requirements.txt  startup.py  startup.txt  test_OligoGenerator.py  test_oligo.py
.github/workflows/: azure-webapps-python.yml  python-package.yml
oligo_generator/: oligo_generator.py  oligo_generator_utility.py
oligo_generator/models/: generator.py
oligo_generator/utilities/: helper_functions.py
oligo_generator/webapp/: oligo_app.py
oligo_generator/webapp/templates/: index.html
tests/: test_NucleotideGeneration.py  test_OligoGenerator.py
