[project]
name = "oligo-generator"
version = "0.1.0"
description = "A tool to generate an oligo library from a nucleotide sequence with amino-acid changes."
authors = [
    { name = "Chris Lim" }
]
license = { text = "N/A" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==3.0.0",
    "flask-socketio>=5.3.6,<6.0.0",
    "gevent>=23.9.1,<24.0.0",
    "python-codon-tables>=0.1.12,<0.2.0",
    "sympy>=1.12,<2.0.0",
]

[dependency-groups]
dev = [
    "flake8==6.1.0",
    "pytest>=7.4.3,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
